--- a/views/info.ejs
+++ b/views/info.ejs
@@ -44,18 +44,22 @@
 
         </div>
 
-        <div id="header-2">
-            <h1>Filmes e Séries</h1>
+        <div id="header-2-info-filme">
             <h1>Conheça meu catálogo de Filmes e Séries</h1>
-            <p>Arraste o cursor sobre o poster para mais informações. </p>
+            <p id="generos">
+                <% let genero=[]; for(let i=0; i < data.genres.length; i++) { genero.push(data.genres[i].name) }; %>
+                    <% let generos=genero.join(', ')%>
+                    <%= generos %>
+            </p>
         </div>
     </header>
     <main>
-
+        <div id="poster-filme">
+            <img src="https://image.tmdb.org/t/p/w500/<%= data.poster_path %>" alt="">
+        </div>
     </main>
     <footer>
         <div id="footer2">
-
 
             <h1 id="titulo-sociais" class="footer-titulo">Midias Sociais</h1>
             <div id="footer2-icons">
@@ -114,6 +118,7 @@
         <div id="footer3">
             <p id="copyright" class="footer-titulo">©Copyright 2024. Desenvolvido por Samuel Souza.</p>
         </div>
+
     </footer>
     <script src="https://kit.fontawesome.com/f59b0f7f02.js" crossorigin="anonymous"></script>
     <script src="js/js.js"></script>
