:sparkles: release 18/12 sobre ok

--- a/views/erro.ejs
+++ b/views/erro.ejs
@@ -54,9 +54,8 @@
         <a id="link-voltar" href="/">Voltar à Página Inicial</a>
     </main>
     <footer>
-        <div id="footer2">
+        <div id="footer2"></div>
 
-            <h1 id="titulo-sociais" class="footer-titulo">Midias Sociais</h1>
             <div id="footer2-icons">
                 <a target="_blank" rel=”noopener” href="https://github.com/devsamuca"><img class="footer2-icon"
                         src="/img/social/github.png" alt="Github"></a>
@@ -75,45 +74,9 @@
             </div>
 
         </div>
-        <div id="footer1">
-            <div class="footer1-element" id="footer-linguagem">
-                <h1 class="footer-titulo">Tecnologias</h1>
-                <div class="footer1-itens">
-                    <a class="footer1-link" href="https://www.w3schools.com/nodejs/default.asp">Node</a>
-                    <a class="footer1-link" href="https://www.w3schools.com/html/default.asp">Html</a>
-                    <a class="footer1-link" href="https://www.w3schools.com/css/default.asp">Css</a>
-                    <a class="footer1-link" href="https://www.w3schools.com/js/default.asp">Java Script</a>
-                </div>
-            </div>
-
-            <div class="footer1-element" id="footer-ferramentas">
-                <h1 class="footer-titulo">Ferramentas</h1>
-                <div class="footer1-itens">
-                    <a target="_blank" rel="noopener" class="footer1-link"
-                        href="https://vscode.dev/?vscode-lang=pt-br">VsCode</a>
-                    <a target="_blank" rel="noopener" class="footer1-link" href="https://git-scm.com/">Git</a>
-                    <a target="_blank" rel="noopener" class="footer1-link"
-                        href="https://www.flaticon.com/br/?k=1719151636320&log-in=google">Flaticon</a>
-                    <a target="_blank" rel="noopener" class="footer1-link"
-                        href="https://fontawesome.com/">Fontawesome</a>
-                </div>
-            </div>
-
-            <div class="footer1-element" id="footer-api">
-                <h1 class="footer-titulo">Api</h1>
-                <div class="footer1-itens">
-                    <a class="footer1-link" href="https://developer.themoviedb.org/reference/discover-movie">The Movie
-                        DataBase</a>
-                    <p class="opacity">.</p>
-                    <p class="opacity">.</p>
-                    <p class="opacity">.</p>
-                </div>
-            </div>
-        </div>
         <div id="footer3">
-            <p id="copyright" class="footer-titulo">©Copyright 2024. Desenvolvido por Samuel Souza.&#127801;</p>
+            <p id="copyright" class="footer-titulo">©Copyright 2024. Desenvolvido por Samuel Souza. &#127801</p>
         </div>
-
     </footer>
     <script src="https://kit.fontawesome.com/f59b0f7f02.js" crossorigin="anonymous"></script>
     <script src="js/js.js"></script>
