--- a/views/index.ejs
+++ b/views/index.ejs
@@ -123,65 +123,28 @@
     </section>
 
     <footer>
-        <div id="footer2">
+        <div id="footer2"></div>
 
-
-            <h1 id="titulo-sociais" class="footer-titulo">Midias Sociais</h1>
             <div id="footer2-icons">
-                <a target="_blank" rel="noopener" href="https://github.com/devsamuca"><img class="footer2-icon"
+                <a target="_blank" rel=”noopener” href="https://github.com/devsamuca"><img class="footer2-icon"
                         src="/img/social/github.png" alt="Github"></a>
-                <a target="_blank" rel="noopener" href="https://www.instagram.com/samuca.io"><img class="footer2-icon"
+                <a target="_blank" rel=”noopener” href="https://www.instagram.com/samuca.io"><img class="footer2-icon"
                         src="/img/social/instagram.png" alt="Instagram"></a>
-                <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/devsamuel/"><img
+                <a target="_blank" rel=”noopener” href="https://www.linkedin.com/in/devsamuel/"><img
                         class="footer2-icon" src="/img/social/linkedin.png" alt="Linkedin"></a>
-                <a target="_blank" rel="noopener" href="https://www.youtube.com/@iosamuca"><img class="footer2-icon"
+                <a target="_blank" rel=”noopener” href="https://www.youtube.com/@iosamuca"><img class="footer2-icon"
                         src="/img/social/youtube.png" alt="Youtube"></a>
-                <a target="_blank" rel="noopener" href="https://open.spotify.com/user/31vw57cbppfuqfi2mgy3fjgr53eu"><img
+                <a target="_blank" rel=”noopener” href="https://open.spotify.com/user/31vw57cbppfuqfi2mgy3fjgr53eu"><img
                         class="footer2-icon" src="/img/social/spotify.png" alt="Spotify"></a>
-                <a target="_blank" rel="noopener" href="https://x.com/samucaioo"><img class="footer2-icon"
+                <a target="_blank" rel=”noopener” href="https://x.com/samucaioo"><img class="footer2-icon"
                         src="/img/social/x.png" alt="X"></a>
-                <a target="_blank" rel="noopener" href="https://discord.gg/jETY8m2n6g"><img class="footer2-icon"
+                <a target="_blank" rel=”noopener” href="https://discord.gg/jETY8m2n6g"><img class="footer2-icon"
                         src="/img/social/discordi.png" alt="Discord"></a>
             </div>
 
         </div>
-        <div id="footer1">
-            <div class="footer1-element" id="footer-linguagem">
-                <h1 class="footer-titulo">Tecnologias</h1>
-                <div class="footer1-itens">
-                    <a class="footer1-link" href="https://www.w3schools.com/nodejs/default.asp"><img src="/img/icon/node.png" class="language" alt="">Node</a>
-                    <a class="footer1-link" href="https://www.w3schools.com/html/default.asp"><img src="/img/icon/html.png" class="language" alt="">Html</a>
-                    <a class="footer1-link" href="https://www.w3schools.com/css/default.asp"><img src="/img/icon/css.png" class="language" alt="">Css</a>
-                    <a class="footer1-link" href="https://www.w3schools.com/js/default.asp"><img src="/img/icon/js.png" class="language" alt="">Java Script</a>
-                </div>
-            </div>
-
-            <div class="footer1-element" id="footer-ferramentas">
-                <h1 class="footer-titulo">Ferramentas</h1>
-                <div class="footer1-itens">
-                    <a target="_blank" rel="noopener" class="footer1-link"
-                        href="https://vscode.dev/?vscode-lang=pt-br"><img src="/img/icon/vscode.png" class="language" alt="">VsCode</a>
-                    <a target="_blank" rel="noopener" class="footer1-link" href="https://git-scm.com/"><img src="/img/icon/git.png" class="language" alt="">Git</a>
-                    <a target="_blank" rel="noopener" class="footer1-link"
-                        href="https://www.flaticon.com/br/?k=1719151636320&log-in=google"><img src="/img/icon/node.png" class="language" alt="">Flaticon</a>
-                    <a target="_blank" rel="noopener" class="footer1-link"
-                        href="https://fontawesome.com/"><img src="/img/icon/fontawesome.png" class="language" alt="">Fontawesome</a>
-                </div>
-            </div>
-
-            <div class="footer1-element" id="footer-api">
-                <h1 class="footer-titulo">Api</h1>
-                <div class="footer1-itens">
-                    <a class="footer1-link" href="https://developer.themoviedb.org/reference/discover-movie"><img src="/img/icon/tmdb.png" class="language" alt="">The Movie
-                        DataBase</a>
-                    <p class="opacity">.</p>
-                    <p class="opacity">.</p>
-                    <p class="opacity">.</p>
-                </div>
-            </div>
-        </div>
         <div id="footer3">
-            <p id="copyright" class="footer-titulo">©Copyright 2024. Desenvolvido por Samuel Souza.&#127801;</p>
+            <p id="copyright" class="footer-titulo">©Copyright 2024. Desenvolvido por Samuel Souza. &#127801</p>
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/f59b0f7f02.js" crossorigin="anonymous"></script>
