--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Bebas+Neue&family=Fira+Code:wght@300..700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Karla:ital,wght@0,200..800;1,200..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Parkinsans:wght@300..800&family=Poiret+One&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Squada+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Bebas+Neue&family=Fira+Code:wght@300..700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Karla:ital,wght@0,200..800;1,200..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Parkinsans:wght@300..800&family=Poiret+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Space+Grotesk:wght@300..700&family=Squada+One&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 :root {
     color-scheme: dark;
@@ -8,7 +9,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: "Poiret One", sans-serif;
+    font-family: "PT Sans", serif;
     font-weight: 600;
 }
 
@@ -149,16 +150,27 @@ p {
     }
 }
 
+#section-assistir{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#section-assistir h1{
+    text-align: center;
+    margin-top: 3em;
+}
+
 #assistir {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 3em;
+    margin: 2em;
 }
 
 .assistir {
-    max-height: 4em;
-    border-radius: 1em;
+    max-height: 1.5em;
     margin: 0 1em;
     transition: transform 0.2s ease-in;
 }
@@ -211,12 +223,22 @@ main {
     grid-template-columns: 25% 25% 25% 25%;
 }
 
+.texto-ola{
+    color: #ababab;
+}
+
 #main {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    min-height: 50vh;
+    min-height: 65vh;
+    margin: none;
+}
+
+#main p{
+    max-width: 50vw;
+    text-align: justify;
 }
 
 #maininfo {
@@ -228,6 +250,12 @@ main {
 .item-main {
     margin: 2em 0;
     text-align: center;
+}
+
+#contato{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #erro404 {
@@ -371,7 +399,7 @@ main {
 }
 
 .info-filme p {
-    font-size: 1.2em;
+    font-size: 1em;
     margin: 5px 0;
 }
 
@@ -393,14 +421,6 @@ footer {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #1a1a1c;
-}
-
-#footer1 {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    min-width: 70vw;
 }
 
 .footer-titulo {
@@ -419,42 +439,14 @@ footer {
     }
 }
 
-.footer1-link {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #ffffff;
-    margin: 0.3em;
-    transition: transform ease-in 0.01s;
-
-    &:hover {
-        transform: scale(1.1);
-    }
-
-}
-
-.footer1-itens {
-    display: flex;
-    align-content: center;
-    flex-direction: column;
-    font-size: 0.8em;
-}
-
-.footer1-element {
-    margin: 1em 3em;
-}
 
 #footer2 {
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    min-width: 70vw;
+    min-width: 100vw;
     margin: 1em;
-}
-
-#titulo-sociais {
-    margin: 0 3em;
 }
 
 #footer2-icons {
@@ -475,7 +467,6 @@ footer {
 #footer3 {
     min-width: 100vw;
     padding: 0.5em;
-    background-color: #121212;
 }
 
 #copyright {
@@ -516,6 +507,10 @@ footer {
         border-radius: 0.3em;
         margin: 0 1em;
         transition: transform 0.2s ease-in;
+    }
+
+    #main p{
+        max-width: 90vw;
     }
 
     #main-info {
