--- a/views/info.ejs
+++ b/views/info.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Samuca Cine</title>
+    <title><%= data.name %> <%= data.title %></title>
 </head>
 
 <body>
@@ -58,11 +58,17 @@
                 </h1>
 
                 <p>
-                    <%if( data.first_air_date || data.release_date ){%>
+                    <% if (data.first_air_date || data.release_date) { %>
                         <strong>Estreia:</strong>
-                        <%= data.first_air_date %>
-                            <%= data.release_date %>
-                                <%}%>
+                        <% 
+                            const releaseDate = data.first_air_date || data.release_date; 
+                            if (releaseDate) { 
+                                const dateParts = releaseDate.split('-'); 
+                        %>
+                            <%= dateParts[2] %>/<%= dateParts[1] %>/<%= dateParts[0] %>
+                        <% } %>
+                    <% } %>
+                    
                 </p>
                 <p>
                     <%if( data.overview ){%>
@@ -100,7 +106,7 @@
                         let tempoFilmeSerie = minFilmeSerie / 60
                         tempoFilmeSerie = Math.round(tempoFilmeSerie * 100) /100
                         tempoFilmeSerie = String(tempoFilmeSerie)
-                        tempoFilmeSerie = tempoFilmeSerie.split(' .') %>
+                        tempoFilmeSerie = tempoFilmeSerie.split('.') %>
                                 <strong>Duração:</strong>
                                 <%= tempoFilmeSerie[0] %>h <%= tempoFilmeSerie[1] %>min
                                         <%}%>
@@ -109,81 +115,43 @@
         </div>
     </main>
 
-    <section>
+    <section id="section-assistir">
+        <h1>Assista em alguma dessas plataformas:</h1>
         <div id="assistir">
-            <a href="https://www.max.com/br/pt" rel="noopener"><img class="assistir" src="/img/assistir/hbo.png" alt="HBO"></a>
-            <a href="https://globoplay.globo.com/" rel="noopener"><img class="assistir" src="/img/assistir/globoplay.png" alt="Globo"></a>
-            <a href="https://www.netflix.com/" rel="noopener"><img class="assistir" src="/img/assistir/netflix.png" alt="Netflix"></a>
-            <a href="https://www.primevideo.com/-/pt/offers/nonprimehomepage/ref=dv_web_force_root?language=pt"><img class="assistir" src="/img/assistir/prime-video.png" alt="Prime Video" rel="noopener"></a>
+            <a href="https://www.max.com/br/pt" target="_blank" rel="noopener"><img class="assistir"
+                    src="/img/assistir/hbo.png" alt="HBO"></a>
+            <a href="https://globoplay.globo.com/" target="_blank" rel="noopener"><img class="assistir"
+                    src="/img/assistir/globoplay.png" alt="Globo"></a>
+            <a href="https://www.netflix.com/" target="_blank" rel="noopener"><img class="assistir"
+                    src="/img/assistir/netflix.png" alt="Netflix"></a>
+            <a href="https://www.primevideo.com/-/pt/offers/nonprimehomepage/ref=dv_web_force_root?language=pt"><img
+                    class="assistir" src="/img/assistir/prime-video.png" alt="Prime Video" target="_blank"
+                    rel="noopener"></a>
         </div>
     </section>
     <footer>
-        <div id="footer2">
+        <div id="footer2"></div>
 
-            <h1 id="titulo-sociais" class="footer-titulo">Midias Sociais</h1>
             <div id="footer2-icons">
-                <a target="_blank" rel="noopener" href="https://github.com/devsamuca"><img class="footer2-icon"
+                <a target="_blank" rel=”noopener” href="https://github.com/devsamuca"><img class="footer2-icon"
                         src="/img/social/github.png" alt="Github"></a>
-                <a target="_blank" rel="noopener" href="https://www.instagram.com/samuca.io"><img class="footer2-icon"
+                <a target="_blank" rel=”noopener” href="https://www.instagram.com/samuca.io"><img class="footer2-icon"
                         src="/img/social/instagram.png" alt="Instagram"></a>
-                <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/devsamuel/"><img
+                <a target="_blank" rel=”noopener” href="https://www.linkedin.com/in/devsamuel/"><img
                         class="footer2-icon" src="/img/social/linkedin.png" alt="Linkedin"></a>
-                <a target="_blank" rel="noopener" href="https://www.youtube.com/@iosamuca"><img class="footer2-icon"
+                <a target="_blank" rel=”noopener” href="https://www.youtube.com/@iosamuca"><img class="footer2-icon"
                         src="/img/social/youtube.png" alt="Youtube"></a>
-                <a target="_blank" rel="noopener" href="https://open.spotify.com/user/31vw57cbppfuqfi2mgy3fjgr53eu"><img
+                <a target="_blank" rel=”noopener” href="https://open.spotify.com/user/31vw57cbppfuqfi2mgy3fjgr53eu"><img
                         class="footer2-icon" src="/img/social/spotify.png" alt="Spotify"></a>
-                <a target="_blank" rel="noopener" href="https://x.com/samucaioo"><img class="footer2-icon"
+                <a target="_blank" rel=”noopener” href="https://x.com/samucaioo"><img class="footer2-icon"
                         src="/img/social/x.png" alt="X"></a>
-                <a target="_blank" rel="noopener" href="https://discord.gg/jETY8m2n6g"><img class="footer2-icon"
+                <a target="_blank" rel=”noopener” href="https://discord.gg/jETY8m2n6g"><img class="footer2-icon"
                         src="/img/social/discordi.png" alt="Discord"></a>
             </div>
 
         </div>
-        <div id="footer1">
-            <div class="footer1-element" id="footer-linguagem">
-                <h1 class="footer-titulo">Tecnologias</h1>
-                <div class="footer1-itens">
-                    <a class="footer1-link" href="https://www.w3schools.com/nodejs/default.asp"><img
-                            src="/img/icon/node.png" class="language" alt="">Node</a>
-                    <a class="footer1-link" href="https://www.w3schools.com/html/default.asp"><img
-                            src="/img/icon/html.png" class="language" alt="">Html</a>
-                    <a class="footer1-link" href="https://www.w3schools.com/css/default.asp"><img
-                            src="/img/icon/css.png" class="language" alt="">Css</a>
-                    <a class="footer1-link" href="https://www.w3schools.com/js/default.asp"><img src="/img/icon/js.png"
-                            class="language" alt="">Java Script</a>
-                </div>
-            </div>
-
-            <div class="footer1-element" id="footer-ferramentas">
-                <h1 class="footer-titulo">Ferramentas</h1>
-                <div class="footer1-itens">
-                    <a target="_blank" rel="noopener" class="footer1-link"
-                        href="https://vscode.dev/?vscode-lang=pt-br"><img src="/img/icon/vscode.png" class="language"
-                            alt="">VsCode</a>
-                    <a target="_blank" rel="noopener" class="footer1-link" href="https://git-scm.com/"><img
-                            src="/img/icon/git.png" class="language" alt="">Git</a>
-                    <a target="_blank" rel="noopener" class="footer1-link"
-                        href="https://www.flaticon.com/br/?k=1719151636320&log-in=google"><img src="/img/icon/node.png"
-                            class="language" alt="">Flaticon</a>
-                    <a target="_blank" rel="noopener" class="footer1-link" href="https://fontawesome.com/"><img
-                            src="/img/icon/fontawesome.png" class="language" alt="">Fontawesome</a>
-                </div>
-            </div>
-
-            <div class="footer1-element" id="footer-api">
-                <h1 class="footer-titulo">Api</h1>
-                <div class="footer1-itens">
-                    <a class="footer1-link" href="https://developer.themoviedb.org/reference/discover-movie"><img
-                            src="/img/icon/tmdb.png" class="language" alt="">The Movie
-                        DataBase</a>
-                    <p class="opacity">.</p>
-                    <p class="opacity">.</p>
-                    <p class="opacity">.</p>
-                </div>
-            </div>
-        </div>
         <div id="footer3">
-            <p id="copyright" class="footer-titulo">©Copyright 2024. Desenvolvido por Samuel Souza.&#127801;</p>
+            <p id="copyright" class="footer-titulo">©Copyright 2024. Desenvolvido por Samuel Souza. &#127801</p>
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/f59b0f7f02.js" crossorigin="anonymous"></script>
