--- a/public/css/style.css
+++ b/public/css/style.css
@@ -500,12 +500,12 @@ footer {
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
     }
 
     .assistir {
-        max-height: 3em;
-        border-radius: 0.3em;
-        margin: 0 1em;
+        max-height: 1em;
+        margin: 1em;
         transition: transform 0.2s ease-in;
     }
 
