:rocket: alteração viwes

--- a/views/series.ejs
+++ b/views/series.ejs
@@ -3,7 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Samuel Souza">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Olá, meu nome é Samuel Souza, sou aluno do curso
+    de Engenharia de Software da Universidade Filadélfia e este é um dos meus projetos, 
+    Samuca Cine.">
+    <meta name="keywords" content="Samuel Souza, Samuca Cie, Samuca">
     <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
     <title>Samuca Cine - Séries</title>
